# forq

./: .Makefile.d  .gitignore  Frocq.opam  Makefile.conf  README.md  _RocqProject  dune-project
theories/: Auto.v  Hoare.v  MachineModel.v  Makefile.conf  ProgramSemantics.v  Result.v  State.v  Syntax.v  Tactics.v  Test.glob  Test.vo  Theory.v  _RocqProject  dune
theories/ProofRules/: Hoare.v
theories/ProofRules/Words/: Core.v
theories/Words/: Core.v  Word.v
theories/examples/: loadstore.v
